--- a/styles/app.scss
+++ b/styles/app.scss
@@ -62,12 +62,12 @@ nav {
 
 .marker {
     border: 1px solid #ffffff;
+    position: absolute;
+    display: block;
     height: 10px;
     width: 10px;
-    position: absolute;
-    cursor: pointer;
 
-    &.selected {
+    &.active {
         border-color: #a61600;
     }
 }
