--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,12 +7,10 @@
         <link rel="stylesheet" href="/static/css/app.css" />
     </head>
     <body>
-        <div id="main-container">
-            <div id="main-row">
-                <div id="map" class="col-sm-7 col-md-8 col-lg-9"></div>
-                <div id="sidebar" class="col-sm-5 col-md-4 col-lg-3"></div>
-            </div>
+        <div id="map-container">
+            <div id="map"></div>
         </div>
+        <div id="sidebar"></div>
         <script src="/static/js/app.js" async deferred></script>
     </body>
 </html>
