--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="initial-scale=1.0,width=device-width">
-        <title>Maps Test</title>
+        <title>Home</title>
         <link rel="stylesheet" href="/static/css/app.css" />
     </head>
     <body>
