--- a/styles/app.scss
+++ b/styles/app.scss
@@ -1,4 +1,5 @@
 @import "../vendor/bootstrap/scss/bootstrap";
+@import "../vendor/Font-Awesome/scss/font-awesome";
 
 html, body, #map-container, #map, #sidebar {
     height: 100%;
@@ -29,11 +30,12 @@ nav {
     margin-bottom: 20px;
 }
 
-.pane {
-    h1, h2 {
-        text-transform: uppercase;
-        font-weight: bold;
-    }
+h1 {
+    text-transform: uppercase;
+}
+
+h1, h2 {
+    font-weight: bold;
 
     a {
         color: #373a3c;
@@ -56,16 +58,44 @@ nav {
         text-align: center;
         margin-bottom: 0.25rem;
     }
-}
 
-.freq {
+    .desc {
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        text-align: center;
+        margin-bottom: 0.25rem;
+    }
+
     h2 {
         font-size: 1rem;
     }
+}
 
-    p {
-        text-align: right;
+#controls {
+    font-size: 1.2rem;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+#notes {
+    margin-bottom: 20px;
+
+    textarea {
+        font-size: 0.8rem;
     }
+
+    .btn {
+        font-size: 0.8rem;
+    }
+}
+
+#noteText {
+    margin-bottom: -0.5rem;
+}
+
+.sReading {
+    text-align: right;
 }
 
 .marker {
@@ -76,8 +106,11 @@ nav {
     width: 10px;
     z-index: 1000;
 
-    &.active {
+    &.active, &.preview {
         border-color: #a61600;
+    }
+
+    &.active {
         z-index: 10000;
     }
 
@@ -85,7 +118,6 @@ nav {
         height: 12px;
         width: 12px;
         border-width: 2px;
-        border-color: #a61600;
         z-index: 20000;
     }
 }
