Use circles instead of squares

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -101,6 +101,7 @@ h1, h2 {
 
 .marker {
     border: 1px solid #ffffff;
+    border-radius: 5px;
     position: absolute;
     display: block;
     height: 10px;
