--- a/styles/app.scss
+++ b/styles/app.scss
@@ -107,6 +107,7 @@ h1, h2 {
     height: 10px;
     width: 10px;
     z-index: 1000;
+    outline: 0;
 
     &.active, &.preview {
         border-color: #a61600;
