s/fade-in/fadeIn/

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -143,7 +143,7 @@ h1, h2 {
     }
 }
 
-.fade-in {
+.fadeIn {
     opacity: 0;
     animation: fadeIn ease-in 1;
     animation-fill-mode: forwards;
