Use cdn bootstrap and fontawesome

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,6 +4,11 @@
         <meta charset="utf-8">
         <meta name="viewport" content="initial-scale=1.0,width=device-width">
         <title>Home</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" />
+        <link rel="stylesheet"
+            href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
+            integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ"
+            crossorigin="anonymous" />
         <link rel="stylesheet" href="/static/css/app.css" />
     </head>
     <body>
